# moneyroam

./: Dockerfile  LICENSE  Procfile  README.md  build.sh  manage.py  pyproject.toml  reneder.yaml  requirements.txt
accounts/: admin.py  context_processors.py  forms.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py  0003_customuser_date_joined_customuser_is_active_and_more.py  0004_customuser_is_superuser.py  0005_remove_customuser_is_superuser.py  0006_customuser_groups_customuser_is_superuser_and_more.py  0007_alter_profile_avatar.py  0008_alter_profile_avatar.py  0009_alter_profile_user.py  0010_alter_profile_avatar.py  0011_profile_avatar_thumbnail_alter_profile_avatar.py  0012_alter_profile_avatar_thumbnail.py  0013_alter_profile_avatar_thumbnail.py  0014_alter_profile_avatar_thumbnail.py  0015_alter_profile_avatar_thumbnail.py  0016_alter_profile_avatar_thumbnail.py  (+5 more)
core/: interfaces.py
invoices/: admin.py  context_processors.py  dto.py  exceptions.py  filters.py  forms.py  models.py  repositories.py  services.py  urls.py  utils.py  views.py
logger/: filters.py
moneyroam/: asgi.py  context_processors.py  settings.py  urls.py  utils.py  views.py  wsgi.py
preferences/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
settings/: base_settings.py  dev_settings.py  prod_settings.py
static/css/: navbar.css  (+2 more)
templates/: base_page.html  homescreen_base.html  menu_nav_bar.html  navbar.html  root_page_base.html  starting_page.html
utils/: currency_manager.py
(+73 files in other folders)
