[tool.poetry]
name = "moneyroam"
version = "0.1.0"
description = ""
authors = ["antony-kosenko <kosenko.anton.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"
pydantic = "^2.1.1"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
