[tool.poetry]
name = "moneyroam"
version = "0.1.0"
description = ""
authors = ["antony-kosenko <kosenko.anton.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"
pydantic = "^2.1.1"
django-mptt = "^0.14.0"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
requests = "^2.31.0"
django-filter = "^23.5"
django-resized = "^1.0.2"
django-debug-toolbar = "^4.3.0"
django-cleanup = "^8.1.0"
gunicorn = "^22.0.0"
environs = "^11.0.0"
uvicorn = "^0.29.0"
boto3 = "^1.34.112"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
